--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.3"
+    "mongoose": "^8.19.3",
+    "otp-generator": "^4.0.1",
+    "twilio": "^5.10.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
